# daoji-demo

./: .env.example  .gitignore  .gitignore copy  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PyOxidizer 详细介绍.md  README.md  crontab_example.txt  hello.py  kafka_demo.ipynb  mypy.ini  pydantic.ipynb  pyproject.toml  pytest.ini  run_traffic.sh  test_llm_reason.py  update_github_hosts.sh  🚀 PyOxidizer 详细介绍.md
.cursor/: mcp.json.example
.cursor/rules/: fastapi.mdc  git-commit.mdc  python-packages-manager.mdc
AutoJs/: 01.js  02.js  close_view.js  dd.js  js2tasker.js  vip01.js  vip02.js  ww_01.js  wx_.js
MCP/: mcp_load.py  mcp_npx.py  加载MCP列表.ipynb  工具类.ipynb
agents/: async.ipynb  lang-chatbot.ipynb  lang-chatbot.py  lang-time-travel.ipynb
aws/: traffic.py
cgn/: multi_sheets.xlsx  qa_chain.ipynb  中广核标签预警数据.xlsx
colorful_log/: colorful.py
daoji_core/: README.md  __init__.py
daoji_core/config/: __init__.py  ai.py  aws.py  base.py  manager.py  supabase.py  web.py
daoji_core/data/: __init__.py  interface.py  models.py  pipeline.py
daoji_core/modules/: __init__.py  base.py  registry.py
daoji_core/utils/: __init__.py  exceptions.py  logging.py
daoji_demo/: traffic.py
examples/: framework_demo.py
hello-page/: hello.html  image_proxy.py
json_decode/: geson_json.py  json_decode.py
maturin/: Introduce.ipynb
memory-bank/: activeContext.md  progress.md  projectbrief.md  tasks.md
memory-bank/archive/: archive-daoji-demo-architecture-20241201.md
memory-bank/creative/: creative-architecture-design.md  creative-config-management.md  creative-data-flow.md
memory-bank/reflection/: reflection-daoji-demo-architecture.md
nb_log_demo/: README.md  nb_log_marimo_demo.py  run_all_demos.sh  run_marimo_demo.sh
nb_log_demo/advanced/: 01_enhanced_print.py  02_frequency_control.py  03_external_services.py  04_web_framework.py
nb_log_demo/basic/: 01_simple_logging.py  02_file_logging.py  03_multiple_loggers.py  04_log_levels.py
nb_log_demo/config_examples/: nb_log_config_dev.py  nb_log_config_explanation.py  nb_log_config_prod.py
nb_log_demo/performance/: benchmark_comparison.py  performance_report.md
notebooks/: toolfront_book.ipynb
playwright/: open_arc.py
prefect_schedule/: .dockerignore  .gitignore  Makefile  QUICKSTART.md  README.docker.md  deploy-flow.sh  docker-compose.prod.yml  docker-compose.yml  env.template  main.py  nginx.conf  prefect.yaml  pyproject.toml  start.sh
prefect_schedule/backups/: .gitkeep
prefect_schedule/data/: .gitkeep
prefect_schedule/ssl/: .gitkeep
pyarrow/: arrow_benchmark.py  json2arrow.py  json2schema.py  json_flattern.py  nested_test.json  nested_test.jsonl  pandas_json.ipynb  pandas_load_jsonl.py  performance_test.py  pyarrow_load_json.py  test.json
rich-print/: demo.py
scripts/: format.sh
small_model/: entities_extract.py  ner_page.py
smol_docling/: docling_demo.py
supabase/: use_rls.py
tests/: conftest.py  test_logger.py
word_cloud/: demo.sh  generate_wordcloud.py  sample_text.txt  word_cloud_demo.py
