[project]
name = "daoji-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.13",
    "mypy-boto3-lightsail>=1.37.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "typer>=0.15.2",
]

[project.scripts]
aws-traffic = "daoji_demo.traffic:main"

# 文档格式化、编码规范工具

# ruff: Python 代码 Lint 工具
# https://github.com/charliermarsh/ruff
# 自定义配置项： https://beta.ruff.rs/docs/settings/
[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py312"
exclude = ["scripts"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.pyright]
reportGeneralTypeIssues = false

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
